<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lolview.MainActivity"
    android:label="@string/main_activity_label" >

    <TextView
        android:id="@+id/maintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome" 
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"/>
	
    <EditText
	    android:id="@+id/summonername"
	    android:layout_height="wrap_content"
	    android:hint="@string/summoner_prompt"
	    android:inputType="textPersonName"
	    android:layout_width="fill_parent">
	</EditText>
	
    <Button
	    android:id="@+id/matchbutton"
	    android:layout_height="wrap_content"
	    android:text="@string/submit_button"
	    android:onClick="searchMatch"
	    android:layout_width="fill_parent">
	</Button>
	
    <Spinner
	    android:id="@+id/region_spinner"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:popupBackground="#e3e3e3"/>
    
    <Button
        android:layout_marginTop="30dp"
	    android:id="@+id/streambutton"
	    android:layout_height="wrap_content"
	    android:text="@string/stream_button"
	    android:onClick="openStreamList"
	    android:layout_width="fill_parent">
	</Button>

</LinearLayout>
